--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,11 @@
 .main {
   flex: 1 0 auto;
 }
+.webp .main__content {
+  background: url(../img/Rectangle.webp);
+  background-position: center 100%;
+  height: 604px;
+}
 .main__content {
   background: url(../img/Rectangle.png);
   background-position: center 100%;
